--- a/FI.WebAtividadeEntrevista/WebAtividadeEntrevista.csproj
+++ b/FI.WebAtividadeEntrevista/WebAtividadeEntrevista.csproj
@@ -196,9 +196,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\BancoDeDados.mdf" />
-    <Content Include="App_Data\BancoDeDados_log.ldf">
-      <DependentUpon>BancoDeDados.mdf</DependentUpon>
-    </Content>
+    <Content Include="App_Data\BancoDeDados_log.ldf" />
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
